--- a/content/index.html
+++ b/content/index.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='韓國國旗解說.html'>韓國國旗解說</a><li class='has-children'><a href='.html'></a><ul class='dropdown'><li><a href='國旗程式詳細解說.html'>國旗程式詳細解說</a></li></ul><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='w2-3.html'>Next</a> >> w2-3<br /><h1>關於</h1>
-<p><a href="https://github.com/mdecycu/cmsite"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://github.com/mdecycu/cmsite</span></span></span></span></span></span></span></span></span></span></span></span></span></span></a></p>
-<br /> <a href='w2-3.html'>Next</a> >> w2-3</div>
+    <div id="tipue_search_content"> <a href='韓國國旗解說.html'>Next</a> >> 韓國國旗解說<br /><h1>關於</h1>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;"><a href="https://github.com/mdecycu/cmsite">https://github.com/mdecycu/cmsite</a><a href="https://github.com/mdecycu/cmsite"></a></span></span></span></span></span></span></span></span></span></span></span></span></span></span></p>
+<br /> <a href='韓國國旗解說.html'>Next</a> >> 韓國國旗解說</div>
         
     <!-- footer -->
       <div class="container">
