--- a/content/w2-3.html
+++ b/content/w2-3.html
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='關於.html'>關於</a><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
+                     <li><a href='關於.html'>關於</a><li><a href='韓國國旗解說.html'>韓國國旗解說</a><li class='has-children'><a href='.html'></a><ul class='dropdown'><li><a href='國旗程式詳細解說.html'>國旗程式詳細解說</a></li></ul><li><a href='w2-3.html'>w2-3</a><li><a href='w4-5.html'>w4-5</a><li><a href='w6.html'>w6</a><li><a href='w7.html'>w7</a><li><a href='w8.html'>w8</a><li><a href='W11-12.html'>W11-12</a><li><a href='w13.html'>w13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='cEX.html'>cEX</a><ul class='dropdown'><li><a href='課程1.html'>課程1</a><li><a href='練習1.html'>練習1</a></li></ul><li class='has-children'><a href='ANSIC.html'>ANSIC</a><ul class='dropdown'><li><a href='課程2.html'>課程2</a><li><a href='練習2.html'>練習2</a></li></ul><li><a href='期末總結.html'>期末總結</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,11 +142,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">關於 << <a href='關於.html'>Previous</a> <a href='w4-5.html'>Next</a> >> w4-5<br /><h1>w2-3</h1>
+    <div id="tipue_search_content">國旗程式詳細解說 << <a href='國旗程式詳細解說.html'>Previous</a> <a href='w4-5.html'>Next</a> >> w4-5<br /><h1>w2-3</h1>
 <p>網路設定</p>
 <p><video controls="controls" height="641" width="1000">
 <source src="./../images/Network%20settings.mp4" type="video/mp4"/></video></p>
-<br />關於 << <a href='關於.html'>Previous</a> <a href='w4-5.html'>Next</a> >> w4-5</div>
+<br />國旗程式詳細解說 << <a href='國旗程式詳細解說.html'>Previous</a> <a href='w4-5.html'>Next</a> >> w4-5</div>
         
     <!-- footer -->
       <div class="container">
